edited scores cell

--- a/main.ipynb
+++ b/main.ipynb
@@ -336,13 +336,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "05cbafe6-a80d-4d58-819a-205a108024ea",
+   "metadata": {},
+   "source": [
+    "Evaluated Scores"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2858b0af-f5c5-44b7-8621-302bc83cb32e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A_30015420120000      280642.813699\n",
+       "A_30015420140000         1606.89833\n",
+       "A_30015420220000     2021502.714993\n",
+       "A_30015420300000     1188218.401419\n",
+       "A_30015420320000      479749.446268\n",
+       "                         ...       \n",
+       "A_30015424860000      515228.509147\n",
+       "A_30015424870000      763953.835963\n",
+       "A_30015424890000      650847.364288\n",
+       "A_30015424900000       48010.406652\n",
+       "A_30015424970000    14289345.663965\n",
+       "Name: score, Length: 100, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "results_df[\"sc\"]"
+    "results_df[\"score\"]"
    ]
   },
   {
